# ietf2vcon

./: .gitignore  README.md  pyproject.toml
.vcon-repo/: graph.json
scripts/: backfill_transcripts.py  convert_meeting.py  convert_multi_meetings.py  validate_vcons.py
src/ietf2vcon/: __init__.py  cli.py  converter.py  datatracker.py  materials.py  models.py  rsync_mirror.py  transcription.py  vcon_builder.py  youtube.py  zulip_client.py
tests/: __init__.py  conftest.py  test_converter.py  test_datatracker.py  test_models.py  test_transcription.py  test_vcon_builder.py  test_youtube.py
tests/fixtures/: __init__.py  datatracker_document_agenda.json  datatracker_document_recording.json  datatracker_materials.json  datatracker_meeting.json  datatracker_sessions.json  youtube_captions.json3
